# policyengine-ads-dashboard

./: .gitignore  eslint.config.js  eslint.config.mjs  index.html  next.config.ts  package.json  postcss.config.mjs  pyproject.toml  tsconfig.json  vitest.config.js
.github/workflows/: ci.yml  deploy.yml  fetch-data.yml
docs/: managing-ads.md
policyengine_ads_dashboard/: __init__.py  cli.py  fetcher.py  models.py
public/data/: google-ads.json
scripts/: fetch_google_ads.py
src/: App.jsx  index.css  theme.js
src/app/: globals.css  layout.tsx  page.jsx
src/components/: AdsTable.jsx  CampaignTable.jsx  GeographyChart.jsx  Header.jsx  Header.test.jsx  KeywordTable.jsx  SortableTable.jsx  SummaryCards.jsx  SummaryCards.test.jsx  TimeSeriesChart.jsx
src/hooks/: useAdsData.js  useAdsData.test.jsx
src/test/: setup.js
tests/: __init__.py  test_fetcher.py  test_models.py
